# Fed-Policy-Ledger

./: README.md  pyproject.toml
data/raw/: README.md
src/fedledger/: __init__.py  cli.py  config.py  http.py  ids.py  logging_config.py  models.py  pipeline.py  pydantic_models.py  schema.py
tests/: test_cli.py  test_config.py  test_init.py  test_pipeline_e2e.py  test_pydantic_models.py  test_schema.py
tests/fixtures/: minutes_20231213.html  speech_20231019.html  statement_20240131.html
